Style footer and add content. Float page links. Fix angle quotes spacing.

--- a/css/main.css
+++ b/css/main.css
@@ -11,6 +11,7 @@ body {
 }
 
 header,
+footer,
 #sidebar,
 #main_column {
   display: inline;
@@ -41,6 +42,8 @@ footer {
   width: 780px;
   padding-left: 80px;
   padding-right: 80px;
+  margin-top: 12px;
+  height: 60px;
 }
 
 /*=== Header ===*/
@@ -64,6 +67,16 @@ header a:active {
 header h1 {
   font: bold 410% "Droid Serif", serif;
   margin: 0;
+}
+
+/*=== Footer ===*/
+
+footer {
+  font-size: 90%;
+}
+
+footer hr {
+  border: 2px solid #1b1b1b;
 }
 
 /*=== Article ===*/
@@ -121,3 +134,8 @@ pre {
   font: normal 12px "bitstream vera sans mono", monaco, "lucida console", "courier new", courier, serif;
   margin: 0.9em 0; padding: 8px;
 }
+
+/*=== Generic ===*/
+
+.left  { float: left; }
+.right { float: right; }
